Inline --defer_param_files=true.
RELNOTES: None
PiperOrigin-RevId: 217600862